<resources>
    <string name="app_name">MyPlant</string>
    <string name="categories">Plant Categories</string>
    <string name="no_result_found">No Data Found</string>
    <string name="submit">Save</string>
    <string name="category_name">Category Name</string>
    <string name="add_category">Add Category</string>
    <string name="required">Required</string>
    <string name="plant_name">Plant Name</string>
    <string name="plant_category">Plant Category</string>
    <string name="plant_details">Plant Details</string>
    <string name="save">Save</string>
    <string name="plant_image">Plant Image</string>
    <string name="cancel">Cancel</string>
    <string name="type_something_to_search">Type Something to Search</string>
    <string name="search_hint">search</string>
    <string name="select_category">Select Category</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="farmers">Farmers</string>
    <string name="farmer_name">Farmer Name</string>
    <string name="shop_name">Shop Name</string>
    <string name="plant_date">Plant Data</string>
    <string name="farmer_data">Farmer Data</string>
    <string name="plants_list">Plants List</string>
    <string name="pick_image_intent_text">Pick Image</string>
    <string name="explore_plants">Explore Plants</string>
    <string name="sell_this_plant">Sell This Plant</string>
    <string name="qnt">Quantity</string>
    <string name="price">Price</string>
    <string name="my_plants">My Plants</string>
    <string name="check_farmers">Check Farmers</string>
    <string name="make_order">Make Order</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="orders">Orders List</string>
    <string name="enter_text_to_search">Enter Text to search</string>
    <string name="don_t_have_an_account_register">Don\'t Have an account? Register</string>
    <string name="name">Name</string>
    <string name="chats">Chats</string>
    <string name="chat">Chat</string>
    <string name="complaints_list">Complaints</string>
    <string name="title">Complaint Title</string>
    <string name="description">Complaint</string>
    <string name="reply">Reply</string>
    <string name="identify_image">Identify Plant</string>
    <string name="instructions_list">Instructions List</string>
    <string name="inst_title">Instruction Title</string>
    <string name="inst_desc">Instruction Details</string>
    <string name="image">Image</string>
    <string name="type">Type</string>
    <string name="sun_exposure">Sun Exposure</string>
    <string name="soil_type">Soil Type</string>
    <string name="bloom_time">Bloom Time</string>
    <string name="color">Color</string>
    <string name="native_area">Native Area</string>
    <string name="toxicity">Toxicity</string>
    <string name="water">Water</string>
    <string name="explore_farmers">Explore Farmers</string>

    <array name="types">
        <item>Financial Issue</item>
        <item>Complaint About Farmer</item>
        <item>Insufficient Information</item>
        <item>Suggest Update</item>
        <item>Error in app</item>
        <item>other</item>
    </array>
</resources>