<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/purple_700">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_hint"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/dialog_input"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/type_something_to_search"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionSearch"
            android:textSize="16sp"
            android:textColor="@color/purple_500"
            android:textColorHint="@color/purple_700"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:background="@drawable/rounded_corners_edittext_light" />

        <ListView
            android:id="@+id/dialog_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/white">

        <Button
            android:id="@+id/dialog_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:background="@color/purple_200" />

    </LinearLayout>


</LinearLayout>