<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/back"
    tools:context=".activities.admin.FarmerDataActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center"
                android:background="@mipmap/farmers_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/farmer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_marginBottom="10dp"
                    android:id="@+id/etxt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/edit_bg"
                    android:hint="@string/farmer_name"
                    android:inputType="text"
                    android:padding="16dp"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:textColor="@color/black"
                    android:textColorHint="#333"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_10" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:textColorHint="#333"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/etxt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/edit_bg"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:textColorHint="#333"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/etxt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/edit_bg"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>


            <View
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/shop_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:textColorHint="#333"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/etxt_shop_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/edit_bg"
                    android:hint="@string/shop_name"
                    android:inputType="text"
                    android:padding="16dp"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>



            <View
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey_10" />



            <TextView
                android:layout_gravity="center"
                android:id="@+id/txt_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@mipmap/save"
                android:gravity="center"
                android:minHeight="55dp"
                android:padding="10dp"
                android:textSize="18sp"
                android:textStyle="bold" />



        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</LinearLayout>